tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_expression_pure.objc3
// Negative fixture: declaration qualifiers are invalid in expression position.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierExpressionPure;

fn main() -> i32 {
  return pure;
}